# quake-modoki

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
src/: animation.rs  autolaunch.rs  edge.rs  error.rs  focus.rs  main.rs  notification.rs  tracking.rs  tray.rs
