[package]
name = "quake-modoki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
global-hotkey = "0.7.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
notify-rust = "4"
tray-icon = "0.21"
muda = "0.17"
winreg = "0.55"
image = "0.25"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_System_Console"] }
